peac_dev/force-app/main/default/objects/Contract_Contact_Role__c/Contract_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Contract Contact Role</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Contract Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>