peac_dev/force-app/main/default/objects/Contract_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contract_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>