peac_dev/force-app/main/default/objects/Contract_Contact_Role__c/fields/First_3_Digit_of_Ph__c.field-meta.xml
<CustomField>
    <fullName>First_3_Digit_of_Ph__c</fullName>
    <formula>LEFT(Contact__r.Phone, 3)</formula>
    <label>First 3 Digit of Ph#</label>
    <type>Text</type>
</CustomField>