peac_dev/force-app/main/default/objects/Contract_Contact_Role__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <formula>TEXT(Role__c) = &apos;Principal&apos; || TEXT(Role__c) = &apos;Personal Guarantor&apos; || TEXT(Role__c) = &apos;Co-Borrower&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible</label>
    <type>Checkbox</type>
</CustomField>