peac_dev/force-app/main/default/objects/Contract_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Personal Guarantor</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>