peac_dev/force-app/main/default/objects/Contract_Contact_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Contract__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>